Give up experiments with builders: part 1 - usual constructors taking usual parameters